fix: weather widget text-align

--- a/travel-app/src/components/weather/weather.scss
+++ b/travel-app/src/components/weather/weather.scss
@@ -2,6 +2,7 @@
   @include widgets-common-style;
   justify-content: center;
   position: relative;
+  text-align: center;
   &__temp,
   &__humidity-wrapper {
     font-family: Roboto;
